# CNC-Competition

./: README.md
demon_drone_ws-real_world/: .gitignore  build.sh  fishros  install.sh  readme.md
demon_drone_ws-real_world/data/: .gitignore  auto_config.py
demon_drone_ws-real_world/output/: .gitignore
demon_drone_ws-real_world/relevent_packages/: px4.launch  px4_config.yaml  px4_pluginlists.yaml  set_chinese.sh
demon_drone_ws-real_world/scipts/: .gitignore  demon_core.service  demon_core.sh  fpv_ego.sh  fpv_eva.sh  launch_demon_drone.sh  launch_driver.sh  launch_vins.sh  virtual_screen.sh  wifi.service  wifi.sh
demon_drone_ws-real_world/src/VINS-Fusion/config/: .gitignore  left.yaml.example  right.yaml.example  stereo_imu_config.yaml.example  vins_rviz_config.rviz
demon_drone_ws-real_world/src/VINS-Fusion/global_fusion/: CMakeLists.txt
demon_drone_ws-real_world/src/VINS-Fusion/vins_estimator/: CMakeLists.txt
demon_drone_ws-real_world/src/commu_bridge/: CMakeLists.txt  package.xml
demon_drone_ws-real_world/src/commu_bridge/include/: transfer.hpp
demon_drone_ws-real_world/src/commu_bridge/launch/: .gitignore  transfer.launch  transfer.yaml.example
demon_drone_ws-real_world/src/demon_core/: .CMakeLists.txt  .package.xml
demon_drone_ws-real_world/src/object_identify/: CMakeLists.txt  package.xml
demon_drone_ws-real_world/src/object_identify/include/: object_identify.hpp
demon_drone_ws-real_world/src/object_identify/launch/: object_odentify.launch  object_odentify.yaml
demon_drone_ws-real_world/src/object_identify/src/: object_identify_node.cpp
demon_drone_ws-real_world/src/offb/: CMakeLists.txt  package.xml
demon_drone_ws-real_world/src/smart_drone/: CMakeLists.txt  package.xml
demon_drone_ws-real_world/src/smart_drone/include/: smart_drone.hpp
demon_drone_ws-real_world/src/smart_drone/launch/: smart_drone.launch
demon_drone_ws-real_world/src/smart_drone/src/: smart_drone.cpp
demon_drone_ws-real_world/src/stereo/: CMakeLists.txt  package.xml
demon_drone_ws-real_world/src/stereo/include/: stereo.h
demon_drone_ws-real_world/src/stereo/launch/: .gitignore  stereo.launch  stereo_config.yaml.example
demon_drone_ws-real_world/src/stereo/src/: stereo_node.cpp
drone/devel/: .catkin  _setup_util.py  setup.sh
formation-flight/src/planner/traj_replan/: CMakeLists.txt  package.xml
formation-flight/src/planner/traj_replan/include/traj_replan/: traj_replan.h
formation-flight/src/planner/traj_replan/src/: traj_replan.cpp
(+151 files in other folders)
